--- a/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
@@ -54,7 +54,7 @@
 <p>L'outil <b>TechDraw Cote verticale chanfrein</b> cr&eacute;e une cote verticale de la dimension et de l'angle pour un chanfrein.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimensionExample.png&amp;filetimestamp=20211116170629&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimensionExample.png" decoding="async" width="450" height="131" class="mw-file-element" data-file-width="1026" data-file-height="299"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, la cote cr&eacute;&eacute;e</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -113,15 +113,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125110917
+Cached time: 20260125110930
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.141 seconds
+CPU time usage: 0.089 seconds
+Real time usage: 0.130 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 26797/2097152 bytes
-Template argument size: 10611/2097152 bytes
+Post&#8208;expand include size: 26805/2097152 bytes
+Template argument size: 10615/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -129,19 +129,19 @@ Unstrip post&#8208;expand size: 1408/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.163      1 -total
- 19.05%    8.030      1 Template:TechDraw_Tools_navi/fr
- 15.49%    6.532      2 Template:Navigation_menu_2
- 14.21%    5.991      1 Template:Value
- 12.02%    5.070      1 Template:Userdocnavi/fr
-  9.03%    3.807      2 Template:Docnav/fr
-  8.45%    3.561      2 Template:Button
-  8.12%    3.422      1 Template:GuiCommand/fr
-  7.87%    3.320      1 Template:Version/fr
-  7.64%    3.220      3 Template:MenuCommand
+100.00%   33.617      1 -total
+ 26.02%    8.746      1 Template:TechDraw_Tools_navi/fr
+ 17.92%    6.026      2 Template:Navigation_menu_2
+ 12.99%    4.367      1 Template:Value
+ 11.09%    3.727      1 Template:Userdocnavi/fr
+  8.97%    3.015      2 Template:Docnav/fr
+  8.84%    2.973      1 Template:GuiCommand/fr
+  7.72%    2.595      1 Template:VersionMinus/fr
+  6.33%    2.129      1 Template:Caption
+  6.26%    2.104      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125110917 and revision id 1743788. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125110930 and revision id 1743791. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
