--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -104,7 +104,7 @@
 <ul><li><b>Jedin&yacute; n&aacute;stroj</b>: Slou&#269;en&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj Rozm&#283;ru</a> pro v&scaron;echny rozm&#283;rov&eacute; vazby. Samostatn&eacute; n&aacute;stroje jsou seskupeny pod n&iacute;m v rozbalovac&iacute; nab&iacute;dce.</li>
 <li><b>Odd&#283;len&eacute; n&aacute;stroje</b>: Pouze samostatn&eacute; n&aacute;stroje.</li>
 <li><b>Oboje</b>: Jak kombinovan&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj rozm&#283;ru</a>, tak i samostatn&eacute; n&aacute;stroje.</li></ul>
-<p><a href="../index.php?title=Template;After_changing_this_preference_you_must_restart_FreeCAD.&amp;action=edit&amp;redlink=1.html" class="new" title="Template:After changing this preference you must restart FreeCAD. (page does not exist)">Template:After changing this preference you must restart FreeCAD.</a>
+<p><i>After changing this preference you must restart FreeCAD.</i>
 </p>
 </td></tr>
 <tr>
@@ -444,15 +444,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122170526
+Cached time: 20260125110931
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.161 seconds
-Preprocessor visited node count: 1218/1000000
-Post&#8208;expand include size: 30359/2097152 bytes
-Template argument size: 12015/2097152 bytes
+CPU time usage: 0.143 seconds
+Real time usage: 0.247 seconds
+Preprocessor visited node count: 1221/1000000
+Post&#8208;expand include size: 30349/2097152 bytes
+Template argument size: 12071/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -460,19 +460,19 @@ Unstrip post&#8208;expand size: 2254/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.226      1 -total
- 18.95%    6.674      1 Template:Sketcher_Tools_navi/cs
- 13.12%    4.621      2 Template:Navigation_menu_2
- 11.26%    3.966      1 Template:Userdocnavi/cs
-  9.32%    3.284     96 Template:MenuCommand
-  8.66%    3.052      3 Template:PropertyView
-  6.36%    2.241      1 Template:Value
-  5.80%    2.042      2 Template:Docnav
-  4.79%    1.686      3 Template:Variable
-  3.99%    1.406     17 Template:Version
+100.00%   77.852      1 -total
+ 16.80%   13.077      1 Template:Sketcher_Tools_navi/cs
+ 10.87%    8.466      1 Template:Userdocnavi/cs
+ 10.24%    7.972      3 Template:PropertyView
+  8.15%    6.344     96 Template:MenuCommand
+  7.96%    6.199      2 Template:Navigation_menu_2
+  6.48%    5.044      1 Template:Value
+  5.24%    4.083      3 Template:Variable
+  4.78%    3.723      2 Template:Docnav
+  4.63%    3.604     17 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122170526 and revision id 1742514. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260125110931 and revision id 1743792. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
