--- a/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
+++ b/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
@@ -7,7 +7,7 @@
 <li><a href="../ko/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#54840; &#44600;&#51060; &#52824;&#49688; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/fr">Cote verticale chanfrein</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Cote de diam&egrave;tre</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -112,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111431
+Cached time: 20260125112304
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.135 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.210 seconds
 Preprocessor visited node count: 378/1000000
-Post&#8208;expand include size: 26578/2097152 bytes
-Template argument size: 10432/2097152 bytes
+Post&#8208;expand include size: 26602/2097152 bytes
+Template argument size: 10448/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -128,19 +128,19 @@ Unstrip post&#8208;expand size: 1528/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.989      1 -total
- 22.58%    9.030      1 Template:TechDraw_Tools_navi/fr
- 16.01%    6.404      2 Template:Navigation_menu_2
- 12.63%    5.052      1 Template:GuiCommand/fr
- 12.06%    4.824      1 Template:Userdocnavi/fr
- 10.38%    4.150      2 Template:Docnav/fr
-  9.33%    3.730      1 Template:Value
-  9.28%    3.710      1 Template:Caption
-  6.58%    2.631      1 Template:Version/fr
-  5.42%    2.168      1 Template:Incode
+100.00%   66.506      1 -total
+ 19.11%   12.710      1 Template:TechDraw_Tools_navi/fr
+ 14.97%    9.959      1 Template:Value
+ 13.74%    9.138      2 Template:Navigation_menu_2
+ 10.87%    7.228      1 Template:Userdocnavi/fr
+  8.73%    5.805      2 Template:Docnav/fr
+  8.69%    5.780      1 Template:GuiCommand/fr
+  7.76%    5.164      1 Template:VersionMinus/fr
+  7.58%    5.039      1 Template:Caption
+  7.20%    4.787      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111431 and revision id 1743811. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125112304 and revision id 1743826. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
