--- a/wiki/fr/TechDraw_ExtensionArcLengthAnnotation.html
+++ b/wiki/fr/TechDraw_ExtensionArcLengthAnnotation.html
@@ -47,7 +47,7 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/fr">TechDraw Longueur d'arc</a>
+<td class="ctEven"><a href="../fr/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/fr">TechDraw Cote de longueur d'arc</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -110,15 +110,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124185304
+Cached time: 20260125112356
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.119 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.138 seconds
 Preprocessor visited node count: 341/1000000
-Post&#8208;expand include size: 25286/2097152 bytes
-Template argument size: 9994/2097152 bytes
+Post&#8208;expand include size: 25302/2097152 bytes
+Template argument size: 10010/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -126,17 +126,17 @@ Unstrip post&#8208;expand size: 1655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.663      1 -total
- 37.72%    8.171      1 Template:TechDraw_Tools_navi/fr
- 32.85%    7.117      2 Template:Navigation_menu_2
- 17.15%    3.715      1 Template:Userdocnavi/fr
- 15.06%    3.263      1 Template:GuiCommand/fr
- 12.44%    2.695      2 Template:Docnav/fr
-  8.63%    1.870      1 Template:Caption
-  6.00%    1.300      1 Template:MenuCommand
+100.00%   26.031      1 -total
+ 39.57%   10.301      1 Template:TechDraw_Tools_navi/fr
+ 28.15%    7.328      2 Template:Navigation_menu_2
+ 18.98%    4.940      1 Template:Userdocnavi/fr
+ 11.67%    3.037      2 Template:Docnav/fr
+  9.90%    2.576      1 Template:GuiCommand/fr
+  9.11%    2.371      1 Template:Caption
+  8.64%    2.249      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:329296-0!canonical and timestamp 20260124185304 and revision id 1743458. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:329296-0!canonical and timestamp 20260125112356 and revision id 1743830. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
