--- a/wiki/fr/TechDraw_ExtensionInsertSquare.html
+++ b/wiki/fr/TechDraw_ExtensionInsertSquare.html
@@ -69,7 +69,7 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Cote de diam&egrave;tre</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Symbole de r&eacute;p&eacute;tition</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
@@ -113,15 +113,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112443
+Cached time: 20260125112451
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.197 seconds
+CPU time usage: 0.060 seconds
+Real time usage: 0.107 seconds
 Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25808/2097152 bytes
-Template argument size: 10214/2097152 bytes
+Post&#8208;expand include size: 25832/2097152 bytes
+Template argument size: 10230/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -129,18 +129,18 @@ Unstrip post&#8208;expand size: 1146/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.825      1 -total
- 37.35%   22.718      1 Template:TechDraw_Tools_navi/fr
- 32.38%   19.693      2 Template:Navigation_menu_2
- 16.44%   10.002      1 Template:MenuCommand
- 15.07%    9.168      1 Template:Userdocnavi/fr
- 10.10%    6.142      1 Template:GuiCommand/fr
-  6.46%    3.928      2 Template:Docnav/fr
-  5.69%    3.459      1 Template:Button
-  2.79%    1.698      1 Template:Caption
+100.00%   26.691      1 -total
+ 39.51%   10.545      1 Template:TechDraw_Tools_navi/fr
+ 19.75%    5.272      2 Template:Navigation_menu_2
+ 13.52%    3.609      1 Template:Userdocnavi/fr
+ 12.47%    3.327      1 Template:GuiCommand/fr
+ 10.75%    2.869      2 Template:Docnav/fr
+  9.16%    2.444      1 Template:Caption
+  7.65%    2.042      1 Template:Button
+  4.94%    1.318      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112443 and revision id 1743832. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112451 and revision id 1743834. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
