--- a/wiki/fr/TechDraw_ExtensionInsertSquare.html
+++ b/wiki/fr/TechDraw_ExtensionInsertSquare.html
@@ -10,7 +10,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -21,7 +20,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: cotes &rarr; Ins&eacute;rer le pr&eacute;fixe "&#9633;"
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#9633;&nbsp;&raquo;
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -45,12 +44,11 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">TechDraw Diam&egrave;tre</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">TechDraw R&eacute;p&eacute;tition</a>
+<td class="ctEven"><a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">TechDraw Cote de diam&egrave;tre</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">TechDraw R&eacute;p&eacute;tition</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Section tube</b> ins&egrave;re un symbole "&#9633;" au d&eacute;but du texte de la cote.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_extensionInsertSquareExample.png&amp;filetimestamp=20241001073118&amp;.html" class="mw-file-description"><img src="../File/TechDraw_extensionInsertSquareExample.png" decoding="async" width="500" height="128" class="mw-file-element" data-file-width="1142" data-file-height="293"></a></span>
@@ -113,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112451
+Cached time: 20260125112533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.107 seconds
-Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25832/2097152 bytes
-Template argument size: 10230/2097152 bytes
+CPU time usage: 0.070 seconds
+Real time usage: 0.094 seconds
+Preprocessor visited node count: 347/1000000
+Post&#8208;expand include size: 25876/2097152 bytes
+Template argument size: 10274/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -129,18 +127,18 @@ Unstrip post&#8208;expand size: 1146/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.691      1 -total
- 39.51%   10.545      1 Template:TechDraw_Tools_navi/fr
- 19.75%    5.272      2 Template:Navigation_menu_2
- 13.52%    3.609      1 Template:Userdocnavi/fr
- 12.47%    3.327      1 Template:GuiCommand/fr
- 10.75%    2.869      2 Template:Docnav/fr
-  9.16%    2.444      1 Template:Caption
-  7.65%    2.042      1 Template:Button
-  4.94%    1.318      1 Template:MenuCommand
+100.00%   21.419      1 -total
+ 29.75%    6.372      1 Template:TechDraw_Tools_navi/fr
+ 23.48%    5.029      2 Template:Navigation_menu_2
+ 16.95%    3.631      2 Template:Docnav/fr
+ 15.14%    3.242      1 Template:Userdocnavi/fr
+ 13.05%    2.796      1 Template:GuiCommand/fr
+  8.06%    1.727      1 Template:Caption
+  7.23%    1.549      1 Template:MenuCommand
+  6.77%    1.450      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112451 and revision id 1743834. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112533 and revision id 1743836. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
